--- a/project/techtrends/Dockerfile
+++ b/project/techtrends/Dockerfile
@@ -9,7 +9,7 @@ COPY . /app
 WORKDIR /app
 
 # import dependencies using `pip install -r requirements.txt` and the database is initialized with the pre-defined posts in the init_db.py file
-RUN pip install -r project/techtrends/Dockerfile
+RUN pip install -r project/techtrends/requirements.txt
 RUN python init_db.py
 
 # expose the port 3111
