--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -31,7 +31,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: project/techtrends
           push: true
           file: project/techtrends/Dockerfile
           tags: techtrends:latest
