--- a/project/argocd/deployment.yaml
+++ b/project/argocd/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         app: techtrends
     spec:
       containers:
-      - image: techtrends:latest
+      - image: jaikansra/techtrends:latest
         name: techtrends
         ports:
         - containerPort: 3111
