--- a/project/argocd/helm-techtrends-prod.yaml
+++ b/project/argocd/helm-techtrends-prod.yaml
@@ -15,3 +15,23 @@ spec:
     path: project/helm
     repoURL: https://github.com/jkansra/cloud-native-fundamentals 
     targetRevision: HEAD
+
+
+
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: techtrends-prod
+  namespace: argocd
+spec:
+  destination:
+    namespace: default
+    server: https://kubernetes.default.svc
+  project: default
+  source:
+    helm:
+      valueFiles:
+      - values-prod.yaml
+    path: project/helm 
+    repoURL: https://github.com/jkansra/cloud-native-fundamentals
+    targetRevision: HEAD
