--- a/project/helm/templates/service.yaml
+++ b/project/helm/templates/service.yaml
@@ -1,19 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
-  labels:
-    app: techtrends
   name: techtrends
-  namespace: {{ .Values.namespace.name }} 
+  namespace: {{ .Values.namespace.name }}
 spec:
   ports:
-  - name: 4111-3111
-    port: {{ .Values.service.port}} 
-    protocol: TCP
-    targetPort: {{ .Values.service.targetPort}} 
+  - port: {{ .Values.service.port }}
+    protocol: {{ .Values.service.protocol }}
+    targetPort:
+    {{ if .Values.service.targetPort }}
+      {{ .Values.service.port }}
+    {{ else }}
+      {{ .Values.service.targetPort }}
+    {{ end }}
   selector:
     app: techtrends
-  type: ClusterIP
-status:
-  loadBalancer: {}
+  type: {{ .Values.service.type }}
