--- a/project/helm/values-prod.yaml
+++ b/project/helm/values-prod.yaml
@@ -1,25 +1,18 @@
 namespace:
   name: prod
- 
+
 service:
   port: 7111
-  targetPort: 3111
-  type: ClusterIP
-  protocol: TCP
 
 image:
-  repository: jaikansra/techtrends 
-  tag: latest
   pullPolicy: Always
 
 replicaCount: 5
 
 resources:
   requests:
-    cpu: 350m
     memory: 128Mi
+    cpu: 350m
   limits:
-    memory: "256Mi"
-    cpu: "500m"
-
-
+    memory: 256Mi
+    cpu: 500m
