--- a/project/helm/values-staging.yaml
+++ b/project/helm/values-staging.yaml
@@ -1,20 +1,12 @@
 namespace:
   name: staging
- 
 service:
   port: 5111
-  targetPort: 3111
-  type: ClusterIP
-  protocol: TCP
-
 replicaCount: 3
-
 resources:
   requests:
-    cpu: 300m
     memory: 90Mi
+    cpu: 300m
   limits:
-    memory: "128Mi"
-    cpu: "500m"
-
-
+    memory: 128Mi
+    cpu: 500m
