--- a/project/helm/values.yaml
+++ b/project/helm/values.yaml
@@ -19,6 +19,10 @@ resources:
     memory: 128Mi
 containerPort: 3111
 livenessProbe:
-  path: /healthz
+    httpGet:
+      path: /healthz
+      port: 3111
 readinessProbe:
-  path: /healthz
+    httpGet:
+      path: /healthz
+      port: 3111
